feat: 增加项目幂等与查询
